<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.windows10.ukom.WilayahActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <AutoCompleteTextView
            android:id="@+id/actvProvinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/provinsi"/>
        <AutoCompleteTextView
            android:id="@+id/actvKabupaten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/kabupaten"/>
        <AutoCompleteTextView
            android:id="@+id/actvKecamatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/kecamatan"/>
        <AutoCompleteTextView
            android:id="@+id/actvDesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/desa"/>
        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:layout_gravity="end"
            android:text="Next"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>

    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
